--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.game_template">
+    package="br.com.doublelogic.simple_sudoku">
    <application
-        android:label="game_template"
+        android:label="Simple Sudoku"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
